src/tests/snapshots/learn_chumsky__tests__expr__binary_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
lhs + rhs
---

Some(
    (
        Binary(
            (
                Ident("lhs"),
                0..3,
            ),
            Add,
            (
                Ident("rhs"),
                6..9,
            ),
        ),
        0..9,
    ),
)

--- Errors ---
[]
---
