src/tests/snapshots/learn_chumsky__tests__expr__binary_expressions.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
lhs == rhs
---

Some(
    (
        Binary(
            (
                Ident("lhs"),
                0..3,
            ),
            Eq,
            (
                Ident("rhs"),
                7..10,
            ),
        ),
        0..10,
    ),
)

--- Errors ---
[]
---
