src/tests/snapshots/learn_chumsky__tests__expr__block_expressions-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ }
---

Some(
    Spanned(
        Block(
            [],
        ),
        0..3,
    ),
)

--- Errors ---
[]
---
