src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if (true == false) then ("Hello Universe!") else ("Hello World!")
---

Some(
    (
        If {
            condition: (
                Binary(
                    (
                        Ident("true"),
                        4..8,
                    ),
                    Eq,
                    (
                        Ident("false"),
                        12..17,
                    ),
                ),
                4..17,
            ),
            then_branch: (
                String("Hello Universe!"),
                25..42,
            ),
            else_branch: Some(
                (
                    String("Hello World!"),
                    50..64,
                ),
            ),
        },
        0..65,
    ),
)

--- Errors ---
[]
---
