src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if true == false then "Hello Universe!" else "Hello World!"
---

Some(
    (
        If {
            condition: (
                Binary(
                    (
                        Ident("true"),
                        3..7,
                    ),
                    Eq,
                    (
                        Ident("false"),
                        11..16,
                    ),
                ),
                3..16,
            ),
            then_branch: (
                String("Hello Universe!"),
                22..39,
            ),
            else_branch: Some(
                (
                    String("Hello World!"),
                    45..59,
                ),
            ),
        },
        0..59,
    ),
)

--- Errors ---
[]
---
