src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-7.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if true then print("Hello Universe!")
---

Some(
    (
        If {
            condition: (
                Ident("true"),
                3..7,
            ),
            then_branch: (
                Call(
                    (
                        Ident("print"),
                        13..18,
                    ),
                    [
                        (
                            String("Hello Universe!"),
                            19..36,
                        ),
                    ],
                ),
                13..37,
            ),
            else_branch: None,
        },
        0..37,
    ),
)

--- Errors ---
[]
---
