src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-8.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if true then { print("Hello Universe!"); }
---

Some(
    (
        If {
            condition: (
                Ident("true"),
                3..7,
            ),
            then_branch: (
                Block(
                    [
                        Expr(
                            (
                                Call(
                                    (
                                        Ident("print"),
                                        15..20,
                                    ),
                                    [
                                        (
                                            String("Hello Universe!"),
                                            21..38,
                                        ),
                                    ],
                                ),
                                15..39,
                            ),
                        ),
                    ],
                ),
                13..42,
            ),
            else_branch: None,
        },
        0..42,
    ),
)

--- Errors ---
[]
---
