src/tests/snapshots/learn_chumsky__tests__expr__if_expressions.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if true then { print("Hello Universe!"); } else { print("Hello World!"); }
---

Some(
    (
        If {
            condition: (
                Ident("true"),
                3..7,
            ),
            then_branch: (
                Block(
                    [
                        Expr(
                            (
                                Call(
                                    (
                                        Ident("print"),
                                        15..20,
                                    ),
                                    [
                                        (
                                            String("Hello Universe!"),
                                            21..38,
                                        ),
                                    ],
                                ),
                                15..39,
                            ),
                        ),
                    ],
                ),
                13..42,
            ),
            else_branch: Some(
                (
                    Block(
                        [
                            Expr(
                                (
                                    Call(
                                        (
                                            Ident("print"),
                                            50..55,
                                        ),
                                        [
                                            (
                                                String("Hello World!"),
                                                56..70,
                                            ),
                                        ],
                                    ),
                                    50..71,
                                ),
                            ),
                        ],
                    ),
                    48..74,
                ),
            ),
        },
        0..74,
    ),
)

--- Errors ---
[]
---
