src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-10.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
'\r'
---

Some(
    Spanned(
        Char('\r'),
        0..4,
    ),
)

--- Errors ---
[]
---
